modified logs.html, added search, filter and pagination

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Patient Records</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
-
+<body class="bg-gray-100 text-gray-800">
     <!-- Security Overlay -->
     <div id="overlay" class="fixed inset-0 flex items-center justify-center bg-black backdrop-blur-sm bg-opacity-80 z-50">
         <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-sm">
