--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="main-content">
+    <div class="main-content min-h-screen flex flex-col">
         <header class="bg-blue-700 text-white p-4 flex justify-between items-center shadow">
             <h1 class="text-2xl font-bold">Patient Records</h1>
             <img src="images/logo-placeholder.jpg" alt="Logo" class="h-10 w-auto">
@@ -39,7 +39,7 @@
         </nav>
 
 
-        <main class="p-4">
+        <main class="flex-grow p-4">
             <div class="mb-4 flex justify-between">
                 <button id="toggleViewBtn" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded shadow">Switch to List View</button>
             </div>
@@ -92,6 +92,10 @@
                 </div>
             </div>
         </main>
+
+        <footer class="text-center text-white text-xs sm:text-sm py-6 px-12 mt-8 bg-blue-700">
+            <p>Patient Records Footer Placeholder @2025</p>
+        </footer>
     </div>
 
     <script>
@@ -99,7 +103,7 @@
 
         window.onload = function () {
             // Fetch hospital user data from backend
-            fetch('/api/hospital-users')
+            fetch('http://localhost:3333/api/hospital-users')
                 .then(res => res.json())
                 .then(data => {
                     hospitalUsers = data;
