--- a/logs.html
+++ b/logs.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
 
-    <main class="">
+    <main class="flex-grow">
         <div class="max-w-7xl mx-auto mt-6 p-4 bg-white shadow rounded">
             <div class="flex flex-col md:flex-row justify-between items-center mb-4 gap-4">
                 <div class="flex items-center gap-4 w-full md:w-2/3">
